@@ -35,5 +35,6 @@ gpg_error_t sexp_to_string (gcry_sexp_t sexp, char **sexp_string);
 gpg_error_t file_to_string (const char *filename, char **string);
 gpg_error_t string_to_sexp (gcry_sexp_t *sexp, char *string);
 gpg_error_t key_filename_construct (char **filename, const char *serialno);
+gpg_error_t lookup_own_username (const char **username);
 
 #endif
