@@ -1,3 +1,8 @@
+2005-10-23  Moritz Schulte  <moritz@g10code.com>
+
+	* support.c (lookup_own_username): New function.
+	* support.h (lookup_own_username): Declare.
+
 2005-10-16  Moritz Schulte  <moritz@g10code.com>
 
 	* support.c (key_filename_construct): New function.
